src/test/test-models/bad/declare-define-var-double-1.stan
data {
  real a1[2];
}
transformed data {
  real td_a1 = a1;   // scalar <- array - bad
}
parameters {
  real y;
}
model {
  y ~ normal(0,1);
}

